sampler/chain/projects/conductor/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/tasks/SubWorkflow.java:91: error: [NullAway] (INDEX= 111) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                    null,
                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/events/queue/DefaultEventQueueProcessor.java:183: error: [NullAway] (INDEX= 116) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        Message msg = new Message(UUID.randomUUID().toString(), objectMapper.writeValueAsString(outputMap), null);
                                                                                                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/service/ExecutionService.java:101: error: [NullAway] (INDEX= 97) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return poll(taskType, workerId, null, count, timeoutInMilliSecond);
                                        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/execution/tasks/ExclusiveJoin.java:50: error: [NullAway] (INDEX= 82) dereferenced expression joinOn is @Nullable
            joinOn = joinOn.stream().map(name -> TaskUtils.appendIteration(name, task.getIteration())).collect(
                           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/conductor/core/src/main/java/com/netflix/conductor/core/utils/ExternalPayloadStorageUtils.java:192: error: [NullAway] (INDEX= 69) (Covered) passing @Nullable parameter 'null' where @NonNull is required
            task.setOutputData(null);
                               ^

	(see http://t.uber.com/nullaway )
